apps/bitwarden/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitwarden
  namespace: halo
  labels:
    app: bitwarden
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bitwarden
  template:
    metadata:
      labels:
        app: bitwarden
    spec:
      containers:
        - name: bitwarden
          image: vaultwarden/server:1.37.4
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "200Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "200m"
          volumeMounts:
            - mountPath: /data
              name: data-volume
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: bitwarden-pvc
