apps/bitwarden/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bitwarden
  namespace: halo
spec:
  selector:
    app: bitwarden
  ports:
    - protocol: TCP
      port: 80

---
apiVersion: v1
kind: Service
metadata:
  name: bitwarden-ext-ip
  namespace: halo
  annotations:
     metallb.universe.tf/loadBalancerIPs: "192.168.8.33"
spec:
  selector:
    app: bitwarden
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
